# AgroClimaVisio

./: .dockerignore  .gitignore  Dockerfile  Procfile  RAILWAY_DEPLOY.md  README.md  TECHNICAL_CHOICES.md  nixpacks.toml  package.json  railway.json
backend/: .gitignore  .railwayignore  DUCKDB_README.md  Procfile  RAILWAY_DEPLOY.md  README.md  climate_data.py  datasets.py  debug_data.py  download_emul_ssp370.py  duckdb_loader.py  example_duckdb_usage.py  import_to_duckdb.py  indicators.py  inspect_nc_file.py  main.py  models.py  points_config.py  pyproject.toml  railway.json
backend/outils/: README  bib_param_matplotlib_palette_couleur.py  commandes_cdo.sh  compute_time_series_1y_RCM_FR-Metro.sh  liste_RCM_ssp370.txt  plot_figure_2D_Reunion.py  tracer_carte_1variable_1data.py
backend/tests/: test_api.py
docs/: CLIMATE_SCENARIOS.md  DATA_SOURCES.md  QUICK_START.md
frontend/: README.md  package.json  vite.config.ts
frontend/public/: 200.html
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: CheckboxDropdown.css  CheckboxDropdown.tsx  ClimateChart.tsx  CornViabilityChart.tsx  CoverCropFeasibilityChart.tsx  Header.tsx  Map.tsx  ParametersPanel.tsx  RainfallChart.tsx  SQLQueryPanel.tsx
frontend/src/pages/: ChartsPage.css  ChartsPage.tsx  MapPage.tsx  RainfallPage.css  RainfallPage.tsx
